--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Cyber-Kira/react-got-app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Cyber-Kira/react-got-app/issues"
+  },
+  "homepage": "https://github.com/Cyber-Kira/react-got-app#readme"
 }
