--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b build -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,7 +40,7 @@
   "bugs": {
     "url": "https://github.com/Cyber-Kira/react-got-app/issues"
   },
-  "homepage": "https://Cyber-Kira.github.io/react-got-app",
+  "homepage": "https://cyber-kira.github.io/react-got-app",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
